Composer autoload and file structure changes

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "homepage": "http://ivopetkov.com",
             "role": "Developer"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "": "src/"
+        }
+    }
 }
