--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ivopetkov/object-storage",
     "description": "A better way to work with files",
-    "keywords": ["file access", "object storage", "locking", "atomic file operations"],
+    "keywords": ["file access", "object storage", "locking", "atomic file operations", "metadata"],
     "homepage": "https://github.com/ivopetkov/object-storage",
     "license": "MIT",
     "authors": [
