--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
     "require": {
         "php": ">=5.5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
+    },
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "IvoPetkov\\": "src/"
         }
     }
 }
