--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,14 @@
         "php": ">=7.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "6.*"
     },
     "autoload": {
+        "files": ["autoload.php"]
+    },
+    "autoload-dev": {
         "psr-4": {
-            "IvoPetkov\\": "src/"
+            "": "tests/utilities/"
         }
     }
 }
