--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=7.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.*"
+        "phpunit/phpunit": "6.*",
+        "ivopetkov/docs-generator": "0.1.*"
     },
     "autoload": {
         "files": ["autoload.php"]
