--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0"
+        "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*|8.*|9.*",
