--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*"
+        "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*"
     },
     "require-dev": {
         "ivopetkov/docs-generator": "0.1.*"
