--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
         }
     ],
     "require": {
-        "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*"
+        "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*|8.2.*"
     },
     "require-dev": {
-        "ivopetkov/docs-generator": "0.1.*"
+        "ivopetkov/docs-generator": "1.*"
     },
     "autoload": {
         "files": [
