--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /docs-generator.php
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.github export-ignore
 /.travis.yml export-ignore
 /phpunit.xml export-ignore
 /README.md export-ignore
